fix height of nav menu on mobile design

--- a/css/styles.css
+++ b/css/styles.css
@@ -136,14 +136,14 @@ p {font-weight: var(--fw-regular);}
 
 .nav__list.active {
   width: 70%;
-  height: calc(100vh - 5rem);
+  height: calc(100vh - 3.5rem);
   background: linear-gradient(
     var(--top),
     var(--bottom)
   );
 
   position: absolute;
-  top: 5rem;
+  top: 3.5rem;
   right: 0;
 
   padding: 5rem 0;
